public/css/core.css
/***************************/
/* eReader core stylesheet*/
/*************************/

.undecorated-link:hover {
  text-decoration: none;
}
[ng\:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
  display: none !important;
}
.ng-invalid.ng-dirty {
  border-color: #FA787E;
}
.ng-valid.ng-dirty {
  border-color: #78FA89;
}

button.studypage {
  position: relative;
  bottom: 9px;
}

/* ********* */
/* sidebar  */
/* ******* */

#sidebar {
    float: left;
    width: 15%;
    margin-right: 5%;
}

#sidebar button {
    display: block;
    width: 100%;
}

/* ************* */
/* END sidebar  */
/* *********** */

/*************/
/* content  */
/***********/
.container {
  text-align: auto;
}

#breadcrumb {
    display: inline-block;
}

#content {
  margin: 0px auto;
}

#view-window {
    width: 80%;
}

.section-tabs {
  list-style: none;
  margin: 0;
  padding: 0;
}

.smallBreak {
  padding-top: 15px;
}

/*****************/
/* END content  */
/***************/

/*****************/
/* header*/
/***************/
header {
    width: 80%; height: 150px;
    margin: 0px auto 25px auto;
    position: relative;
}

#logo {
    display: inline-block;
    margin: 25px 0px 0px 25px;
    height: 130px;
}

button#profile {
    width: 50px; height: 50px;
    background-color: #aaa;
    position: absolute;
    right: 25px; bottom: 10px;
}

/*********************/
/* END header.jade  */
/*******************/

